Fix cell in GANs notebook

--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -26,15 +26,8 @@
    "metadata": {},
    "source": [
     "%% [markdown]\n",
-    "# 0. Fetching the dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "JePGT61J5cVV"
-   },
-   "source": [
+    "# 0. Fetching the dataset\n",
+    "\n",
     "The dataset can be found on this\n",
     "[GitHub repository](https://github.com/Easternwen/IXI-dataset).\n",
     "In the `size64` folder, there are 1154 files: 2 images for 577 subjects.\n",
@@ -119,7 +112,7 @@
     "plt.title(\"T2 slice for subject 002\")\n",
     "plt.show()\n",
     "\n",
-    "# %%\n",
+    "# %% [markdown]\n",
     "from __future__ import print_function\n",
     "\n",
     "\n",
