Fix cell in Claasification notebook

--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "! git clone https://github.com/14thibea/OASIS-1_dataset.git\n",
     "\n",
-    "# [markdown]\n",
+    "# %% [markdown]\n",
     "# One crucial step before training a neural network is to check the dataset.\n",
     "# Are the classes balanced? Are there biases in the dataset that may\n",
     "# differentiate the labels?\n",
