Fix cleaning issues

--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -39,29 +39,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "KV3cmAW-3ULI"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get the dataset from the GitHub repository\n",
-    "! git clone https://github.com/Easternwen/IXI-dataset.git\n",
+    "# \n",
+    "! git clone https://github.com/Easternwen/IXI-dataset.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%% [markdown]\n",
+    "The dataset used in this lab is composed of preprocessed images from the\n",
+    "[IXI dataset](https://brain-development.org/ixi-dataset/). Two different\n",
+    "structural MRI modalities are comprised in this dataset:\n",
     "\n",
-    "# %% [markdown]\n",
-    "# The dataset used in this lab is composed of preprocessed images from the\n",
-    "# [IXI dataset](https://brain-development.org/ixi-dataset/). Two different\n",
-    "# structural MRI modalities are comprised in this dataset:\n",
-    "#\n",
-    "# - T1 weighted images\n",
-    "#\n",
-    "# - T2 weighted images\n",
-    "#\n",
-    "# These modalities do not highlight the same tissues: for example the CSF\n",
-    "# voxels are cancelled in T1 weighted imaging whereas they are highlighted by\n",
-    "# the T2 weighted imaging."
+    "- T1 weighted images\n",
+    "\n",
+    "- T2 weighted images\n",
+    "\n",
+    "These modalities do not highlight the same tissues: for example the CSF\n",
+    "voxels are cancelled in T1 weighted imaging whereas they are highlighted by\n",
+    "the T2 weighted imaging."
    ]
   },
   {
@@ -76,22 +77,8 @@
    },
    "outputs": [],
    "source": [
-    "! ls ./IXI-dataset/size64"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 281
-    },
-    "id": "BTWQREI29Rmt",
-    "outputId": "7b6c7a7f-057e-499b-d1fd-fbe7efabe2e8"
-   },
-   "outputs": [],
-   "source": [
+    "! ls ./IXI-dataset/size64\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import torch\n",
