Change notebook script format to double percentage

--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -37,9 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "title": "[code]"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get the dataset from the GitHub repository\n",
@@ -66,9 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "title": "[code]"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -95,9 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "title": "[code]"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -133,9 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "title": "[code]"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -255,8 +247,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "lines_to_next_cell": 1,
-    "title": "[code]"
+    "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
@@ -312,8 +303,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "lines_to_next_cell": 1,
-    "title": "[code]"
+    "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
@@ -357,8 +347,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "lines_to_next_cell": 1,
-    "title": "[code]"
+    "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
@@ -407,9 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "title": "[code]"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define the blocks used for the discriminator\n",
@@ -447,8 +434,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "lines_to_next_cell": 1,
-    "title": "[code]"
+    "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
@@ -534,8 +520,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "lines_to_next_cell": 1,
-    "title": "[code]"
+    "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
@@ -695,9 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "title": "[code]"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters for Adam optimizer\n",
@@ -725,8 +708,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "lines_to_next_cell": 1,
-    "title": "[code]"
+    "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
@@ -783,8 +765,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "lines_to_next_cell": 1,
-    "title": "[code]"
+    "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
@@ -842,8 +823,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "lines_to_next_cell": 1,
-    "title": "[code]"
+    "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
@@ -877,9 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "title": "[code]"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_loader = DataLoader(\n",
@@ -901,9 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "title": "[code]"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_train"
@@ -912,9 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "title": "[code]"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_test"
