Fix image links in classification notebook

--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -425,7 +425,7 @@
     "\n",
     "In the following example $\\frac{5-3+2*0}{1}+1 = 3$\n",
     "\n",
-    "![2D convolutional layer gif](https://drive.google.com/uc?id=166EuqiwIZkKPMOlVzA-v5WemJE2tDCES) \n",
+    "<img src=\"https://drive.google.com/uc?id=166EuqiwIZkKPMOlVzA-v5WemJE2tDCES\" style=\"height: 200px;\">\n",
     "\n",
     "To be able to parse all the feature maps of the input, one filter is actually\n",
     "a 4D tensor of size `(input_channels, k, k, k)`. The ensemble of all the\n",
@@ -514,6 +514,7 @@
     "Here is an example in 2D of the standard layer of pytorch `nn.MaxPool2d`:\n",
     "\n",
     "![nn.MaxPool2d behaviour](https://drive.google.com/uc?id=1qh9M9r9mfpZeSD1VjOGQAl8zWqBLmcKz)\n",
+    "<a href=\"nn.MaxPool2d behaviour\"><img src=\"(https://drive.google.com/uc?id=1qh9M9r9mfpZeSD1VjOGQAl8zWqBLmcKz\" style=\"height: 200px;\"></a>\n",
     "\n",
     "We can observe that the last column may not be used depending on the size of\n",
     "the kernel/input and stride value.\n",
