Fix links to images in classification notebook

--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -513,7 +513,6 @@
     "\n",
     "Here is an example in 2D of the standard layer of pytorch `nn.MaxPool2d`:\n",
     "\n",
-    "![nn.MaxPool2d behaviour](https://drive.google.com/uc?id=1qh9M9r9mfpZeSD1VjOGQAl8zWqBLmcKz)\n",
     "<a href=\"nn.MaxPool2d behaviour\"><img src=\"(https://drive.google.com/uc?id=1qh9M9r9mfpZeSD1VjOGQAl8zWqBLmcKz\" style=\"height: 200px;\"></a>\n",
     "\n",
     "We can observe that the last column may not be used depending on the size of\n",
@@ -578,7 +577,7 @@
     "Here is an illustration of `PadMaxPool` behaviour, a column is added to avoid\n",
     "losing data:\n",
     "\n",
-    "![PadMaxPool behaviour](https://drive.google.com/uc?id=14R_LCTiV0N6ZXm-3wQCj_Gtc1LsXdQq_)\n",
+    "<a href=\"PadMaxPool behaviour\"><img src=\"https://drive.google.com/uc?id=14R_LCTiV0N6ZXm-3wQCj_Gtc1LsXdQq_\" style=\"height: 200px;\"></a>\n",
     "\n",
     "Similarly, the formula to find the size of the output feature map is:\n",
     "\n",
