Replace MvaDataset with IXIDataset

--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's create a custom `MvaDataset` class to easily have access to the data.\n",
+    "Let's create a custom `IXIDataset` class to easily have access to the data.\n",
     "Here we don't use tsv files to split subjects between the training and the\n",
     "test set. We only set the dataset to the `train` or `test` mode to access\n",
     "training or test data."
@@ -133,7 +133,7 @@
     "import os\n",
     "\n",
     "\n",
-    "class MvaDataset(torch.utils.data.Dataset):\n",
+    "class IXIDataset(torch.utils.data.Dataset):\n",
     "    \"\"\"Dataset utility class.\n",
     "\n",
     "    Args:\n",
@@ -195,7 +195,7 @@
     "# Create a DataLoader instance for the training set\n",
     "# You will get a batch of samples from the training set\n",
     "dataloader = DataLoader(\n",
-    "    MvaDataset(root, mode=\"train\"),\n",
+    "    IXIDataset(root, mode=\"train\"),\n",
     "    batch_size=1,\n",
     "    shuffle=False,\n",
     ")\n",
@@ -690,11 +690,11 @@
     "\n",
     "# Create dataloaders\n",
     "batch_size = 40\n",
-    "train_loader = DataLoader(MvaDataset(root, mode=\"train\"),\n",
+    "train_loader = DataLoader(IXIDataset(root, mode=\"train\"),\n",
     "                          batch_size=batch_size,\n",
     "                          shuffle=True)\n",
     "\n",
-    "test_loader = DataLoader(MvaDataset(root, mode=\"test\"),\n",
+    "test_loader = DataLoader(IXIDataset(root, mode=\"test\"),\n",
     "                         batch_size=5,\n",
     "                         shuffle=False)\n",
     "\n",
@@ -861,13 +861,13 @@
    "outputs": [],
    "source": [
     "train_loader = DataLoader(\n",
-    "    MvaDataset(root=root, mode=\"train\"),\n",
+    "    IXIDataset(root=root, mode=\"train\"),\n",
     "    batch_size=1,\n",
     "    shuffle=False,\n",
     ")\n",
     "\n",
     "test_dataloader = DataLoader(\n",
-    "    MvaDataset(root=root, mode=\"test\"),\n",
+    "    IXIDataset(root=root, mode=\"test\"),\n",
     "    batch_size=1,\n",
     "    shuffle=False,\n",
     ")\n",
