--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -1571,7 +1571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.3 Evaluating the generator of our CycleGAN\n",
+    "## 3.3 Evaluating the generator of our CycleGAN\n",
     "\n",
     "Let's visualize a few generated T2-weighted images:"
    ]
@@ -1638,20 +1638,7 @@
   },
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
