Fix header for subsection 1.2

--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -404,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.2 Train the generator\n",
+    "## 1.2 Train the generator\n",
     "\n",
     "In order to train the generator, we will repeat the following process:\n",
     "\n",
