--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -612,9 +612,9 @@
     "of the generated images using specific metrics. The most popular metrics are\n",
     "Mean Absolute Error (MAE), Peak Signal-to-Noise Ratio (PSNR) and Structural\n",
     "Similarity index (SSIM):\n",
-    "* MAE = $\\displaystyle \\frac{1}{nm} \\sum_{i=1}^n \\sum_{j=1}^m (T_{ij} - G_{ij}) $\n",
+    "* MAE = $\\displaystyle \\frac{1}{nm} \\sum_{i=1}^n \\sum_{j=1}^m \\vert T_{ij} - G_{ij} \\vert $\n",
     "\n",
-    "* PSNR = $\\displaystyle -10 \\log_{10} \\left( \\frac{1}{nm} \\sum_{i=1}^n \\sum_{j=1}^m (T_{ij} - G_{ij}) \\right) $\n",
+    "* PSNR = $\\displaystyle -10 \\log_{10} \\left( \\frac{1}{nm} \\sum_{i=1}^n \\sum_{j=1}^m (T_{ij} - G_{ij})^2 \\right) $\n",
     "\n",
     "* SSIM = $\\displaystyle  \\frac{(2 \\mu_T \\mu_G + C_1)(2 \\sigma_{TG} + C_2)}{(\\mu_T^2 +\n",
     "\\mu_G^2 + C_1)(\\sigma_T^2 + \\sigma_G^2 + C2)} $ where:\n",
@@ -1252,10 +1252,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 Discriminator of the CycleGAN\n",
+    "## 3.1 Architecture of the CycleGAN\n",
     "\n",
     "The discriminators of the CycleGAN do not have the true sample as input.\n",
-    "Thus, we have to remove the true sample in the `forward` method."
+    "Thus, we have to remove the true sample in the `forward` method.\n",
+    "\n",
+    "Otherwise, we will use the same architectures for the generators and for\n",
+    "the discriminators as the ones from the conditional GAN."
    ]
   },
   {
