--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -462,7 +462,7 @@
     "    \"\"\"\n",
     "\n",
     "    cuda = True if torch.cuda.is_available() else False\n",
-    "    print(\"cuda %s\" % cuda)  # check if GPU is used\n",
+    "    print(f\"Using cuda device: {cuda}\")  # check if GPU is used\n",
     "\n",
     "    # Tensor type (put everything on GPU if possible)\n",
     "    Tensor = torch.cuda.FloatTensor if cuda else torch.FloatTensor\n",
@@ -492,7 +492,7 @@
     "        real_B = Variable(imgs[\"T2\"].type(Tensor))\n",
     "        fake_B = generator(real_A)\n",
     "        img_sample = torch.cat((real_A.data, fake_B.data, real_B.data), -2)\n",
-    "        save_image(img_sample, \"./images/generator/epoch-%s.png\" % epoch,\n",
+    "        save_image(img_sample, f\"./images/generator/epoch-{epoch}.png\",\n",
     "                   nrow=5, normalize=True)\n",
     "\n",
     "    # ----------\n",
@@ -597,7 +597,7 @@
    },
    "outputs": [],
    "source": [
-    "im = img.imread('./images/generator/epoch-%s.png' % (num_epoch - 1))\n",
+    "im = img.imread(f'./images/generator/epoch-{num_epoch - 1}.png')\n",
     "plt.figure(figsize=(20, 20))\n",
     "plt.imshow(np.swapaxes(im, 0, 1))\n",
     "plt.gca().invert_yaxis()\n",
@@ -808,7 +808,7 @@
     "The discriminator aims at improving the generator by having an opposition.\n",
     "The discriminator must not be too good, otherwise the generator won't improve.\n",
     "The generator and the discriminator are trained simultaneously and help\n",
-    "eachothers improve.\n",
+    "each other improve.\n",
     "\n",
     "A conditional generative adversarial network (cGAN) is a particular case\n",
     "of a GAN that is conditioned by the true sample.\n",
@@ -1002,7 +1002,7 @@
     "\n",
     "    Args:\n",
     "        train_loader: (DataLoader) a DataLoader wrapping a the training dataset\n",
-    "        test_loader: (DataLoader) a DataLoader wrapping a the training dataset\n",
+    "        test_loader: (DataLoader) a DataLoader wrapping a the test dataset\n",
     "        num_epoch: (int) number of epochs performed during training\n",
     "        lr: (float) learning rate of the discriminator and generator Adam optimizers\n",
     "        beta1: (float) beta1 coefficient of the discriminator and generator Adam optimizers\n",
@@ -1013,7 +1013,7 @@
     "    \"\"\"\n",
     "\n",
     "    cuda = True if torch.cuda.is_available() else False\n",
-    "    print(\"cuda %s\" % cuda)  # check if GPU is used\n",
+    "    print(f\"Using cuda device: {cuda}\")  # check if GPU is used\n",
     "\n",
     "    # Tensor type (put everything on GPU if possible)\n",
     "    Tensor = torch.cuda.FloatTensor if cuda else torch.FloatTensor\n",
@@ -1052,7 +1052,7 @@
     "        real_t2 = Variable(imgs[\"T2\"].type(Tensor))\n",
     "        fake_t2 = generator(real_t1)\n",
     "        img_sample = torch.cat((real_t1.data, fake_t2.data, real_t2.data), -2)\n",
-    "        save_image(img_sample, \"./images/cgan/epoch-%s.png\" % epoch,\n",
+    "        save_image(img_sample, f\"./images/cgan/epoch-{epoch}.png\",\n",
     "                   nrow=5, normalize=True)\n",
     "\n",
     "    # ----------\n",
@@ -1175,7 +1175,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(20, 20))\n",
-    "im = img.imread('./images/cgan/epoch-%s.png' % (num_epoch - 1))\n",
+    "im = img.imread(f'./images/cgan/epoch-{num_epoch - 1}.png')\n",
     "plt.imshow(np.swapaxes(im, 0, 1))\n",
     "plt.gca().invert_yaxis()\n",
     "plt.show()"
@@ -1364,7 +1364,7 @@
     "\n",
     "    Args:\n",
     "        train_loader: (DataLoader) a DataLoader wrapping a the training dataset\n",
-    "        test_loader: (DataLoader) a DataLoader wrapping a the training dataset\n",
+    "        test_loader: (DataLoader) a DataLoader wrapping a the test dataset\n",
     "        num_epoch: (int) number of epochs performed during training\n",
     "        lr: (float) learning rate of the discriminator and generator Adam optimizers\n",
     "        beta1: (float) beta1 coefficient of the discriminator and generator Adam optimizers\n",
@@ -1375,7 +1375,7 @@
     "    \"\"\"\n",
     "\n",
     "    cuda = True if torch.cuda.is_available() else False\n",
-    "    print(\"cuda %s\" % cuda)  # check if GPU is used\n",
+    "    print(f\"Using cuda device: {cuda}\")  # check if GPU is used\n",
     "\n",
     "    # Tensor type (put everything on GPU if possible)\n",
     "    Tensor = torch.cuda.FloatTensor if cuda else torch.FloatTensor\n",
@@ -1430,7 +1430,7 @@
     "        real_t2 = Variable(imgs[\"T2\"].type(Tensor))\n",
     "        fake_t2 = generator_from_t1_to_t2(real_t1)\n",
     "        img_sample = torch.cat((real_t1.data, fake_t2.data, real_t2.data), -2)\n",
-    "        save_image(img_sample, \"./images/cyclegan/epoch-%s.png\" % epoch,\n",
+    "        save_image(img_sample, f\"./images/cyclegan/epoch-{epoch}.png\",\n",
     "                   nrow=5, normalize=True)\n",
     "\n",
     "    # ----------\n",
@@ -1586,7 +1586,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(20, 20))\n",
-    "im = img.imread('./images/cyclegan/epoch-%s.png' % (num_epoch - 1))\n",
+    "im = img.imread(f'./images/cyclegan/epoch-{num_epoch - 1}.png')\n",
     "plt.imshow(np.swapaxes(im, 0, 1))\n",
     "plt.gca().invert_yaxis()\n",
     "plt.show()"
@@ -1633,6 +1633,13 @@
     "  <img src=\"https://i.ibb.co/6vRgxgB/style-transfer.png\" width=\"800\" border=\"0\">\n",
     "</a>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
