Try to fix LaTeX typo

--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -617,7 +617,7 @@
     "* PSNR = $\\displaystyle -10 \\log_{10} \\left( \\frac{1}{nm} \\sum_{i=1}^n \\sum_{j=1}^m (T_{ij} - G_{ij})^2 \\right) $\n",
     "\n",
     "* SSIM = $\\displaystyle  \\frac{(2 \\mu_T \\mu_G + C_1)(2 \\sigma_{TG} + C_2)}{(\\mu_T^2 +\n",
-    "\\mu_G^2 + C_1)(\\sigma_T^2 + \\sigma_G^2 + C2)} $ where:\n",
+    "\\mu_G^2 + C_1)(\\sigma_T^2 + \\sigma_G^2 + C_2)} $ where:\n",
     "\n",
     "    * $\\mu$ and $\\sigma$ are the mean value and standard deviation of an image respectively, and\n",
     "    * $C_1$ and $C_2$ are two positive constants (one can take $C_1=0.01$ and $C_2=0.03$).\n",
@@ -942,9 +942,9 @@
     "image.\n",
     "\n",
     "For one sample, it is then:\n",
-    "$$\n",
+    "$\n",
     "\\ell_G = - \\log(\\hat{y}_{\\tilde{X}}) + \\lambda * \\text{MAE}(X_{T2}, \\tilde{X}_{T2})\n",
-    "$$\n",
+    "$\n",
     "\n",
     "**Training the discriminator**\n",
     "\n",
@@ -956,9 +956,9 @@
     "of the true images and positive labels.\n",
     "\n",
     "For one sample, it is then:\n",
-    "$$\n",
+    "$\n",
     "\\ell_D = - 0.5 * \\log(\\hat{y}_{X}) - 0.5 * \\log(1 - \\hat{y}_{\\tilde{X}})\n",
-    "$$\n",
+    "$\n",
     "\n",
     "**Training phase**\n",
     "\n",
