--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -942,9 +942,9 @@
     "image.\n",
     "\n",
     "For one sample, it is then:\n",
-    "$\n",
+    "```{math}\n",
     "\\ell_G = - \\log(\\hat{y}_{\\tilde{X}}) + \\lambda * \\text{MAE}(X_{T2}, \\tilde{X}_{T2})\n",
-    "$\n",
+    "```\n",
     "\n",
     "**Training the discriminator**\n",
     "\n",
@@ -956,9 +956,9 @@
     "of the true images and positive labels.\n",
     "\n",
     "For one sample, it is then:\n",
-    "$\n",
+    "```{math}\n",
     "\\ell_D = - 0.5 * \\log(\\hat{y}_{X}) - 0.5 * \\log(1 - \\hat{y}_{\\tilde{X}})\n",
-    "$\n",
+    "```\n",
     "\n",
     "**Training phase**\n",
     "\n",
