Replace string format by f-strings im classification notebook

--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -276,10 +276,10 @@
     "from scipy.ndimage import rotate\n",
     "\n",
     "subject = 'sub-OASIS10003'\n",
-    "preprocessed_pt = torch.load('OASIS-1_dataset/preprocessed/%s_ses-M00_' % subject +\n",
+    "preprocessed_pt = torch.load(f'OASIS-1_dataset/preprocessed/{subject}_ses-M00_' +\n",
     "                    'T1w_segm-graymatter_space-Ixi549Space_modulated-off_' +\n",
     "                    'probability.pt')\n",
-    "raw_nii = nib.load('OASIS-1_dataset/raw/%s_ses-M00_T1w.nii.gz' % subject)\n",
+    "raw_nii = nib.load(f'OASIS-1_dataset/raw/{subject}_ses-M00_T1w.nii.gz')\n",
     "raw_np = raw_nii.get_data()\n",
     "\n",
     "def show_slices(slices):\n",
@@ -292,14 +292,14 @@
     "slice_1 = raw_np[:, 130, :]\n",
     "slice_2 = raw_np[:, :, 60]\n",
     "show_slices([rotate(slice_0, 90), rotate(slice_1, 90), slice_2])\n",
-    "plt.suptitle('Slice of raw image of subject %s' % subject)\n",
+    "plt.suptitle(f'Slice of raw image of subject {subject}')\n",
     "plt.show()\n",
     "\n",
     "slice_0 = preprocessed_pt[0, 60, :, :]\n",
     "slice_1 = preprocessed_pt[0, :, 72, :]\n",
     "slice_2 = preprocessed_pt[0, :, :, 60]\n",
     "show_slices([slice_0, slice_1, slice_2])\n",
-    "plt.suptitle('Center slices of preprocessed image of subject %s' % subject)\n",
+    "plt.suptitle(f'Center slices of preprocessed image of subject {subject}')\n",
     "plt.show()\n",
     "\n",
     "leftHC_pt = CropLeftHC()(preprocessed_pt)\n",
@@ -307,7 +307,7 @@
     "slice_1 = leftHC_pt[0, :, 20, :]\n",
     "slice_2 = leftHC_pt[0, :, :, 15]\n",
     "show_slices([slice_0, slice_1, slice_2])\n",
-    "plt.suptitle('Center slices of left HC of subject %s' % subject)\n",
+    "plt.suptitle(f'Center slices of left HC of subject {subject}')\n",
     "plt.show()"
    ]
   },
@@ -550,7 +550,10 @@
     "        coords = [self.stride - f_maps.size(i + 2) % self.stride for i in range(3)]\n",
     "        for i, coord in enumerate(coords):\n",
     "            if coord == self.stride:\n",
-    "                coords[i] = 0 self.pad.padding = (coords[2], 0, coords[1], 0, coords[0], 0)\n",
+    "                coords[i] = 0 \n",
+    "                \n",
+    "        self.pad.padding = (coords[2], 0, coords[1], 0, coords[0], 0)\n",
+    "        \n",
     "        if self.return_indices:\n",
     "            output, indices = self.pool(self.pad(f_maps))\n",
     "\n",
