--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -346,6 +346,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can observe that our dataset is biased: the AD and CN populations do \n",
+    "not have the same age distributions at all! It becomes then very easy \n",
+    "to differentiate them as the age regression between 20 and 95 years old is\n",
+    " an easier task than AD vs CN classification.\n",
+    "\n",
+    "To avoid this bias, the youngest participants of OASIS are removed from \n",
+    "the training and validation DataFrames. More precisely, to match the AD\n",
+    "population in which the youngest participant is 62, all participants \n",
+    "younger than 62 are removed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "train_df = train_df[['participant_id']].merge(OASIS_df, how='left', on='participant_id', sort=False)\n",
+    "train_df = train_df[train_df.age_bl >= 62]\n",
+    "valid_df = valid_df[['participant_id']].merge(OASIS_df, how='left', on='participant_id', sort=False)\n",
+    "valid_df = valid_df[valid_df.age_bl >= 62]\n",
+    "\n",
+    "train_population_df = characteristics_table(train_df, OASIS_df)\n",
+    "valid_population_df = characteristics_table(valid_df, OASIS_df)\n",
+    "print(\"Train\")\n",
+    "print(train_population_df)\n",
+    "print()\n",
+    "print(\"Validation\")\n",
+    "print(valid_population_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Model\n",
     "We propose here to design a convolutional neural network that takes for input\n",
     "a patch centered on the left hippocampus of size 30x40x30. The architecture\n",
@@ -513,7 +550,7 @@
     "\n",
     "Here is an example in 2D of the standard layer of pytorch `nn.MaxPool2d`:\n",
     "\n",
-    "<a href=\"nn.MaxPool2d behaviour\"><img src=\"(https://drive.google.com/uc?id=1qh9M9r9mfpZeSD1VjOGQAl8zWqBLmcKz\" style=\"height: 200px;\"></a>\n",
+    "![nn.MaxPool2d behaviour](https://drive.google.com/uc?id=1qh9M9r9mfpZeSD1VjOGQAl8zWqBLmcKz)\n",
     "\n",
     "We can observe that the last column may not be used depending on the size of\n",
     "the kernel/input and stride value.\n",
@@ -720,9 +757,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
+    "# ToDo\n",
     "class CustomNetwork(nn.Module):\n",
     "    \n",
     "    def __init__(self):\n",
@@ -733,6 +773,55 @@
     "    def forward(self, x):\n",
     "        # Compose the forward operation using the layers defined in __init__\n",
     "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "class CustomNetwork(nn.Module):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super(CustomNetwork, self).__init__()\n",
+    "        self.convolutions = nn.Sequential(\n",
+    "            nn.Conv3d(1, 8, 3, padding=1),\n",
+    "            # Size 8@30x40x30\n",
+    "            nn.BatchNorm3d(8),\n",
+    "            nn.LeakyReLU(),\n",
+    "            PadMaxPool3d(2, 2),\n",
+    "            # Size 8@15x20x15\n",
+    "            \n",
+    "            nn.Conv3d(8, 16, 3, padding=1),\n",
+    "            # Size 16@15x20x15\n",
+    "            nn.BatchNorm3d(16),\n",
+    "            nn.LeakyReLU(),\n",
+    "            PadMaxPool3d(2, 2),\n",
+    "            # Size 16@8x10x8)\n",
+    "            \n",
+    "            nn.Conv3d(16, 32, 3, padding=1),\n",
+    "            # Size 32@8x10x8\n",
+    "            nn.BatchNorm3d(32),\n",
+    "            nn.LeakyReLU(),\n",
+    "            PadMaxPool3d(2, 2),\n",
+    "            # Size 32@4x5x4\n",
+    "            \n",
+    "        )\n",
+    "        \n",
+    "        self.linear = nn.Sequential(\n",
+    "            nn.Dropout(p=0.5),\n",
+    "            nn.Linear(32 * 4 * 5 * 4, 2)\n",
+    "            \n",
+    "        )\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.convolutions(x)\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "        x = self.linear(x)\n",
+    "        return x"
    ]
   },
   {
@@ -788,10 +877,22 @@
     "        train_loader.dataset.train()\n",
     "        for i, data in enumerate(train_loader, 0):\n",
     "            # Complete the train iteration\n",
+    "            # Retrieve mini-batch and put data on GPU with .cuda()\n",
+    "            images, labels = data['image'].cuda(), data['label'].cuda()\n",
+    "            # Forward pass\n",
+    "            outputs = model(images)\n",
+    "            # Loss computation\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            # Back-propagation (gradients computation)\n",
+    "            loss.backward()\n",
+    "            # Parameters update\n",
+    "            optimizer.step()\n",
+    "            # Erase previous gradients\n",
+    "            optimizer.zero_grad()\n",
     "\n",
     "        _, train_metrics = test(model, train_loader, criterion)\n",
     "\n",
-    "        print('Epoch %i: loss = %f, balanced accuracy = %f' \n",
+    "        print(f'Epoch %i: loss = %f, balanced accuracy = %f' \n",
     "              % (epoch, train_metrics['mean_loss'],\n",
     "                 train_metrics['balanced_accuracy']))\n",
     "\n",
@@ -907,7 +1008,7 @@
     "valid_datasetLeftHC = MRIDataset(img_dir, valid_df, transform=transform)\n",
     "\n",
     "# Try different learning rates\n",
-    "learning_rate = ...\n",
+    "learning_rate = 10**-4 # e.g.: 10**-1, 10**-2, 10**-3\n",
     "n_epochs = 30\n",
     "batch_size = 4\n",
     "\n",
@@ -983,7 +1084,7 @@
     "train_datasetRightHC = MRIDataset(img_dir, train_df, transform=transform)\n",
     "valid_datasetRightHC = MRIDataset(img_dir, valid_df, transform=transform)\n",
     "\n",
-    "learning_rate = ...\n",
+    "learning_rate = 10**-4 # e.g.: 10**-1, 10**-2, 10**-3\n",
     "n_epochs = 30\n",
     "batch_size = 4\n",
     "\n",
@@ -1216,7 +1317,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "def trainAE(model, train_loader, criterion, optimizer, n_epochs):\n",
@@ -1240,13 +1343,24 @@
     "        model.train()\n",
     "        train_loader.dataset.train()\n",
     "        for i, data in enumerate(train_loader, 0):\n",
-    "            @TODO\n",
+    "            # ToDo\n",
     "            # Complete the training function in a similar way\n",
     "            # than for the CNN classification training.\n",
+    "            # Retrieve mini-batch\n",
+    "            images, labels = data['image'].cuda(), data['label'].cuda()\n",
+    "            # Forward pass + loss computation\n",
+    "            _, outputs = model((images))\n",
+    "            loss = criterion(outputs, images)\n",
+    "            # Back-propagation\n",
+    "            loss.backward()\n",
+    "            # Parameters update\n",
+    "            optimizer.step()\n",
+    "            # Erase previous gradients\n",
+    "            optimizer.zero_grad()\n",
     "\n",
     "        mean_loss = testAE(model, train_loader, criterion)\n",
     "\n",
-    "        print('Epoch %i: loss = %f' % (epoch, mean_loss))\n",
+    "        print(f'Epoch %i: loss = %f' % (epoch, mean_loss))\n",
     "\n",
     "        if mean_loss < train_best_loss:\n",
     "            best_model = deepcopy(model)\n",
@@ -1281,9 +1395,15 @@
     "            loss = criterion(outputs, images)\n",
     "            total_loss += loss.item()\n",
     "    \n",
-    "    return total_loss / len(data_loader.dataset) / np.product(data_loader.dataset.size)\n",
-    "\n",
-    "\n",
+    "    return total_loss / len(data_loader.dataset) / np.product(data_loader.dataset.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "learning_rate = 10**-2\n",
     "n_epochs = 30\n",
     "batch_size = 4\n",
@@ -1316,7 +1436,7 @@
     "from scipy.ndimage import rotate\n",
     "\n",
     "subject = 'sub-OASIS10003'\n",
-    "preprocessed_pt = torch.load('OASIS-1_dataset/preprocessed/%s_ses-M00_' % subject +\n",
+    "preprocessed_pt = torch.load(f'OASIS-1_dataset/preprocessed/{subject}_ses-M00_' +\n",
     "                    'T1w_segm-graymatter_space-Ixi549Space_modulated-off_' +\n",
     "                    'probability.pt')\n",
     "input_pt = CropLeftHC()(preprocessed_pt).unsqueeze(0).cuda()\n",
@@ -1327,14 +1447,14 @@
     "slice_1 = input_pt[0, 0, :, 20, :].cpu()\n",
     "slice_2 = input_pt[0, 0, :, :, 15].cpu()\n",
     "show_slices([slice_0, slice_1, slice_2])\n",
-    "plt.suptitle('Center slices of the input image of subject %s' % subject)\n",
+    "plt.suptitle(f'Center slices of the input image of subject {subject}')\n",
     "plt.show()\n",
     "\n",
     "slice_0 = output_pt[0, 0, 15, :, :].cpu().detach()\n",
     "slice_1 = output_pt[0, 0, :, 20, :].cpu().detach()\n",
     "slice_2 = output_pt[0, 0, :, :, 15].cpu().detach()\n",
     "show_slices([slice_0, slice_1, slice_2])\n",
-    "plt.suptitle('Center slices of the output image of subject %s' % subject)\n",
+    "plt.suptitle(f'Center slices of the output image of subject {subject}')\n",
     "plt.show()"
    ]
   },
@@ -1356,7 +1476,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "def compute_dataset_features(data_loader, model):\n",
@@ -1379,10 +1501,17 @@
     "    concat_labels_np = concat_labels.numpy()\n",
     "    concat_names = np.array(concat_names)[:, np.newaxis]\n",
     "\n",
-    "    return concat_codes_np, concat_labels_np, concat_names\n",
-    "\n",
-    "\n",
-    "train_codes, train_labels, names = compute_dataset_features(train_loaderBothHC, best_AEBothHC)"
+    "    return concat_codes_np, concat_labels_np, concat_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_codes, train_labels, names = compute_dataset_features(train_loaderBothHC, best_AEBothHC)\n",
+    "train_codes, train_labels, names = compute_dataset_features(train_loaderLeftHC, best_AELeftHC)"
    ]
   },
   {
@@ -1401,12 +1530,12 @@
    "source": [
     "from sklearn import mixture\n",
     "\n",
-    "components = 2\n",
-    "model = mixture.GaussianMixture(components)\n",
-    "model.fit(X)\n",
-    "Y_pred = model.predict(X)\n",
+    "n_components = 2\n",
+    "model = mixture.GaussianMixture(n_components)\n",
+    "model.fit(train_codes)\n",
+    "train_predict = model.predict(train_codes)\n",
     "\n",
-    "metrics = compute_metrics(Y, Y_pred)\n",
+    "metrics = compute_metrics(train_labels, train_predict)\n",
     "print(metrics)"
    ]
   },
@@ -1440,7 +1569,7 @@
     "plt.title('Clustering values according to age and MMS score')\n",
     "for component in range(n_components):\n",
     "    predict_df = merged_df[merged_df.predicted_label == str(component)]\n",
-    "    plt.plot(predict_df['age_bl'], predict_df['MMS'], 'o', label=\"cluster %i\" % component)\n",
+    "    plt.plot(predict_df['age_bl'], predict_df['MMS'], 'o', label=f\"cluster {component}\")\n",
     "plt.legend()\n",
     "plt.xlabel('age')\n",
     "plt.ylabel('MMS')\n",
@@ -1456,6 +1585,13 @@
     "like in [(Moradi et al,\n",
     "2015)](https://www.researchgate.net/publication/266374876_Machine_learning_framework_for_early_MRI-based_Alzheimer%27s_conversion_prediction_in_MCI_subjects)..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
