Add the numbering to classification notebook

--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification of Alzheimer's disease diagnosis\n",
+    "# 0. Classification of Alzheimer's disease diagnosis\n",
     "\n",
     "The goal of this lab session is to train a network that will perform a binary\n",
     "classification between control participants and patients that are affected by\n",
@@ -315,7 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cross-validation\n",
+    "# 1. Cross-validation\n",
     "\n",
     "In order to choose hyperparameters the set of images is divided into a\n",
     "training set (80%) and a validation set (20%). The data split was performed\n",
@@ -383,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model\n",
+    "# 2. Model\n",
     "We propose here to design a convolutional neural network that takes for input\n",
     "a patch centered on the left hippocampus of size 30x40x30. The architecture\n",
     "of the network was found using a Random Search on architecture + optimization\n",
@@ -828,7 +828,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train & Test\n",
+    "# 3. Train & Test\n",
     "\n",
     "Complete the `train` method in order to iteratively update the weights of the\n",
     "network.\n",
@@ -1152,7 +1152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Clustering on AD & CN populations\n",
+    "# 4. Clustering on AD & CN populations\n",
     "\n",
     "The classification results above were obtained in a supervised way:\n",
     "neurologists examine the participants of OASIS and gave a diagnosis depending\n",
