Add first look of the dataframe in classification

--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -9,7 +9,7 @@
     "The goal of this lab session is to train a network that will perform a binary\n",
     "classification between control participants and patients that are affected by\n",
     "Alzheimer's disease. The input of the network is a neuroimaging modality: the\n",
-    "T1 weighted MRI. In this project we use the [pytorch\n",
+    "T1 weighted MRI. In this project we use the [Pytorch\n",
     "library](https://pytorch.org/)."
    ]
   },
@@ -57,7 +57,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "source": [
     "One crucial step before training a neural network is to check the dataset.\n",
     "Are the classes balanced? Are there biases in the dataset that may\n",
@@ -70,7 +72,25 @@
     "(healthy subject).\n",
     "- The CDR (Clinical Dementia Rating), that is null if the participant is\n",
     "non-demented and of 0.5, 1, 2 and 3 for very mild, mild, moderate and severe\n",
-    "dementia, respectively."
+    "dementia, respectively.\n",
+    "\n",
+    "Let's explore the data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "# Load the complete dataset\n",
+    "OASIS_df = pd.read_csv('OASIS-1_dataset/tsv_files/lab_1/OASIS_BIDS.tsv', sep='\\t')\n",
+    "# Show first items of the table\n",
+    "print(OASIS_df.head())\n",
+    "# First visual inspection\n",
+    "_ = OASIS_df.hist(figsize=(20, 14))  "
    ]
   },
   {
@@ -79,9 +99,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the complete dataset\n",
-    "OASIS_df = pd.read_csv('OASIS-1_dataset/tsv_files/lab_1/OASIS_BIDS.tsv', sep='\\t')\n",
-    "\n",
     "# Study the characteristics of the AD & CN populations (age, sex, MMS, cdr_global)\n",
     "def characteristics_table(df, merged_df):\n",
     "    \"\"\"Creates a DataFrame that summarizes the characteristics of the DataFrame df\"\"\"\n",
@@ -280,7 +297,8 @@
     "                    'T1w_segm-graymatter_space-Ixi549Space_modulated-off_' +\n",
     "                    'probability.pt')\n",
     "raw_nii = nib.load(f'OASIS-1_dataset/raw/{subject}_ses-M00_T1w.nii.gz')\n",
-    "raw_np = raw_nii.get_data()\n",
+    "\n",
+    "raw_np = raw_nii.get_fdata()\n",
     "\n",
     "def show_slices(slices):\n",
     "    \"\"\" Function to display a row of image slices \"\"\"\n",
@@ -335,11 +353,9 @@
     "\n",
     "train_population_df = characteristics_table(train_df, OASIS_df)\n",
     "valid_population_df = characteristics_table(valid_df, OASIS_df)\n",
-    "print(\"Train\")\n",
-    "print(train_population_df)\n",
-    "print()\n",
-    "print(\"Validation\")\n",
-    "print(valid_population_df)"
+    "\n",
+    "print(f\"Train dataset:\\n {train_population_df}\\n\")\n",
+    "print(f\"Validation dataset:\\n {valid_population_df}\")"
    ]
   },
   {
@@ -360,9 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_df = train_df[['participant_id']].merge(OASIS_df, how='left', on='participant_id', sort=False)\n",
@@ -372,11 +386,9 @@
     "\n",
     "train_population_df = characteristics_table(train_df, OASIS_df)\n",
     "valid_population_df = characteristics_table(valid_df, OASIS_df)\n",
-    "print(\"Train\")\n",
-    "print(train_population_df)\n",
-    "print()\n",
-    "print(\"Validation\")\n",
-    "print(valid_population_df)"
+    "\n",
+    "print(f\"Train dataset:\\n {train_population_df}\\n\")\n",
+    "print(f\"Validation dataset:\\n {valid_population_df}\")"
    ]
   },
   {
