--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -426,7 +426,7 @@
     "\n",
     "For a 3D CNN the dimension of the feature maps is actually 5D as the first\n",
     "dimension is the batch size. This dimension is added by the `DataLoader` of\n",
-    "pytorch which stacks the 4D tensors computed by a `Dataset`."
+    "Pytorch which stacks the 4D tensors computed by a `Dataset`."
    ]
   },
   {
@@ -443,9 +443,9 @@
     "for data in example_dataloader:\n",
     "    pass\n",
     "\n",
-    "print(\"Shape of Dataset output\\n\", example_dataset[0]['image'].shape)\n",
-    "print()\n",
-    "print(\"Shape of DataLoader output\\n\", data['image'].shape)"
+    "print(f\"Shape of Dataset output:\\n {example_dataset[0]['image'].shape}\\n\")\n",
+    "\n",
+    "print(f\"Shape of DataLoader output:\\n {data['image'].shape}\")"
    ]
   },
   {
