Fix a few typos in GAN notebook

--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -474,7 +474,7 @@
     "    # Loss function\n",
     "    criterion = torch.nn.L1Loss()  # A loss for a voxel-wise comparison of images like torch.nn.L1Loss\n",
     "\n",
-    "    # Initialize generator and discriminator\n",
+    "    # Initialize the generator\n",
     "    generator = GeneratorUNet()\n",
     "\n",
     "    if cuda:\n",
@@ -483,7 +483,7 @@
     "\n",
     "    # Optimizer\n",
     "    optimizer = torch.optim.Adam(generator.parameters(),\n",
-    "                                   lr=lr, betas=(beta1, beta2))\n",
+    "                                 lr=lr, betas=(beta1, beta2))\n",
     "\n",
     "    def sample_images(epoch):\n",
     "        \"\"\"Saves a generated sample from the validation set\"\"\"\n",
@@ -609,9 +609,10 @@
    "metadata": {},
    "source": [
     "After doing visual quality control, it is a good idea to quantify the quality\n",
-    "of the generated images using specific metrics. The most popular metrics are\n",
-    "Mean Absolute Error (MAE), Peak Signal-to-Noise Ratio (PSNR) and Structural\n",
-    "Similarity index (SSIM):\n",
+    "of the generated images using specific metrics. Some popular metrics include\n",
+    "the Mean Absolute Error (MAE), the Peak Signal-to-Noise Ratio (PSNR) and\n",
+    "the Structural Similarity index (SSIM):\n",
+    "\n",
     "* MAE = $\\displaystyle \\frac{1}{nm} \\sum_{i=1}^n \\sum_{j=1}^m \\vert T_{ij} - G_{ij} \\vert $\n",
     "\n",
     "* PSNR = $\\displaystyle -10 \\log_{10} \\left( \\frac{1}{nm} \\sum_{i=1}^n \\sum_{j=1}^m (T_{ij} - G_{ij})^2 \\right) $\n",
@@ -637,19 +638,9 @@
     "The higher, the better. Maximum value is 1.\n",
     "\n",
     "For those interested, you can find [here](https://www.pyimagesearch.com/2014/09/15/python-compare-two-images/)\n",
-    "a reference to better understand the differences between these metrics."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    " <b>Exercise</b>: Define a function for each metric mentioned above and\n",
-    " evaluate the quality of the generated images on the training and test\n",
-    " sets. Compute the metrics for each image individually and find the best\n",
-    " and worst generated images according to these metrics.\n",
-    "</div>"
+    "a reference to better understand the differences between these metrics.\n",
+    "\n",
+    "We provide an implementation for each metric with the functions below."
    ]
   },
   {
@@ -1187,7 +1178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now evaluate the generator of the CGAN with the same three metrics\n",
+    "We will now evaluate the generator of the cGAN with the same three metrics\n",
     "on both the training set and the test set by computing the mean value for\n",
     "each metric:"
    ]
@@ -1361,7 +1352,7 @@
    "outputs": [],
    "source": [
     "def train_cyclegan(train_loader, test_loader, num_epoch=500,\n",
-    "          lr=0.0001, beta1=0.9, beta2=0.999):\n",
+    "                   lr=0.0001, beta1=0.9, beta2=0.999):\n",
     "    \"\"\"Train a CycleGAN.\n",
     "\n",
     "    Args:\n",
@@ -1635,13 +1626,6 @@
     "  <img src=\"https://i.ibb.co/6vRgxgB/style-transfer.png\" width=\"800\" border=\"0\">\n",
     "</a>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
