Change datasets hosting

--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -31,12 +31,14 @@
    "source": [
     "# 0. Fetching the dataset\n",
     "\n",
-    "The dataset can be found on this\n",
+    "The dataset can be found on this \n",
+    "[server](https://aramislab.paris.inria.fr/files/data/databases/DL4MI/IXI-dataset.tar.gz) \n",
+    "and alternatively in the following\n",
     "[GitHub repository](https://github.com/Easternwen/IXI-dataset).\n",
     "In the `size64` folder, there are 1154 files: 2 images for 577 subjects.\n",
     "The size of each image is (64, 64).\n",
     "\n",
-    "Let's clone the repository and have a look at the data."
+    "Let's download the file and have a look at the data."
    ]
   },
   {
@@ -45,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get the dataset from the GitHub repository\n",
+    "# Get the dataset from the server\n",
     "! git clone https://github.com/Easternwen/IXI-dataset.git"
    ]
   },
