--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -27,7 +27,10 @@
     "from os import path\n",
     "from torchvision import transforms\n",
     "import random\n",
-    "from copy import deepcopy"
+    "from copy import deepcopy\n",
+    "import urllib.request\n",
+    "import ssl\n",
+    "import tarfile"
    ]
   },
   {
@@ -52,7 +55,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! git clone https://github.com/14thibea/OASIS-1_dataset.git"
+    "gcontext = ssl.SSLContext()\n",
+    "dataseturl = \"https://aramislab.paris.inria.fr/files/data/databases/DL4MI/OASIS-1-dataset.tar.gz\"\n",
+    "fstream = urllib.request.urlopen(dataseturl, context=gcontext)\n",
+    "tarfile = tarfile.open(fileobj=fstream, mode=\"r:gz\")\n",
+    "tarfile.extractall()"
    ]
   },
   {
