Add jupyter_cache creation to CI script

--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -97,7 +97,22 @@
     "# Show first items of the table\n",
     "print(OASIS_df.head())\n",
     "# First visual inspection\n",
-    "_ = OASIS_df.hist(figsize=(20, 14))  "
+    "_ = OASIS_df.hist(figsize=(20, 14))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "source": [
+    "From these first graphics, it's possible to have an initial idea of the\n",
+    "disrtibution of the data. For example, the eduacational level is well distributed\n",
+    "among the participants of the study. Also most of the subject are young and healthy\n",
+    "(MNS score equal 30 and CDR score equal 0).\n",
+    "\n",
+    "The next cell will create a function that summarizes the characteristics of the \n",
+    "population in this dataset. We will use it later."
    ]
   },
   {
@@ -1072,7 +1087,7 @@
    "outputs": [],
    "source": [
     "valid_resultsLeftHC_df = valid_resultsLeftHC_df.merge(OASIS_df, how='left', on='participant_id', sort=False)\n",
-    "valid_resultsLeftHC_old_df = valid_resultsLeftHC_df[(valid_resultsLeftHC_df.age_bl_x >= 62)]\n",
+    "valid_resultsLeftHC_old_df = valid_resultsLeftHC_df[(valid_resultsLeftHC_df.age_bl >= 62)]\n",
     "compute_metrics(valid_resultsLeftHC_old_df.true_label, valid_resultsLeftHC_old_df.predicted_label)"
    ]
   },
