--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -106,13 +106,14 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "From these first graphics, it's possible to have an initial idea of the\n",
-    "disrtibution of the data. For example, the eduacational level is well distributed\n",
-    "among the participants of the study. Also most of the subject are young and healthy\n",
-    "(MNS score equal 30 and CDR score equal 0).\n",
+    "From these graphics, it's possible to have an overview of the distribution of\n",
+    "the data, for the numerical values. For example, the educational level is\n",
+    "well distributed among the participants of the study. Also, most of the\n",
+    "subject are young and healthy (MNS score equal 30 and CDR score equal 0).\n",
     "\n",
-    "The next cell will create a function that summarizes the characteristics of the \n",
-    "population in this dataset. We will use it later."
+    "The next cell will create (and run) a function (`characteristics_table`) that\n",
+    "highlights the main features of the population in the dataset. We will use it\n",
+    "later."
    ]
   },
   {
