Add tag to prevent printing the output in the jupyter-book

--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -260,6 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "<div class=\"alert alert-block alert-info\">\n",
     "<b>Exercise</b>: Create a <code>GeneratorUNet</code> class to define the\n",
     "generator with the architecture given above.\n",
@@ -559,6 +560,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ---\n",
+    "# tags: [hide-output, show-input]\n",
+    "# ---\n",
     "# Parameters for Adam optimizer\n",
     "lr = 0.0002\n",
     "beta1 = 0.5\n",
