--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -557,12 +557,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "incorrectly_encoded_metadata": "{tags=\"hide-output\"}"
+   },
    "outputs": [],
    "source": [
-    "# ---\n",
-    "# tags: [hide-output, show-input]\n",
-    "# ---\n",
     "# Parameters for Adam optimizer\n",
     "lr = 0.0002\n",
     "beta1 = 0.5\n",
@@ -1636,6 +1635,7 @@
  ],
  "metadata": {
   "jupytext": {
+   "cell_metadata_json": true,
    "main_language": "python"
   },
   "kernelspec": {
