Fix tag name fo remove stdout in cell

--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -558,7 +558,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "incorrectly_encoded_metadata": "{tags=\"hide-output\"}"
+    "incorrectly_encoded_metadata": "{tags=\"remove-stdout\"}"
    },
    "outputs": [],
    "source": [
