Add note to change runtype if using Colab

--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "source": [
+    "```{note}\n",
+    "(if running in Colab, think of changing the runtime type before starting, in\n",
+    "order  to have access to GPU ressources: Runtime->Change Runtime Type, then\n",
+    "chose GPU for Hardware accelerator).\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# 0. Classification of Alzheimer's disease diagnosis\n",
