--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -7,9 +7,9 @@
    },
    "source": [
     "```{note}\n",
-    "(if running in Colab, think of changing the runtime type before starting, in\n",
+    "If running in Colab, think of changing the runtime type before starting, in\n",
     "order  to have access to GPU ressources: Runtime->Change Runtime Type, then\n",
-    "chose GPU for Hardware accelerator).\n",
+    "chose GPU for hardware accelerator.\n",
     "```\n"
    ]
   },
