Fix path to pt files, new dataset version

--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -333,7 +333,7 @@
     "subject = 'sub-OASIS10003'\n",
     "preprocessed_pt = torch.load(f'OASIS-1_dataset/CAPS/subjects/{subject}/ses-M00/' +\n",
     "                    'deeplearning_prepare_data/image_based/custom/' + subject +\n",
-    "                    '_' + 'ses-M00_'+\n",
+    "                    '_ses-M00_'+\n",
     "                    'T1w_segm-graymatter_space-Ixi549Space_modulated-off_' +\n",
     "                    'probability.pt')\n",
     "raw_nii = nib.load(f'OASIS-1_dataset/raw/{subject}_ses-M00_T1w.nii.gz')\n",
@@ -475,7 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_dir = path.join('OASIS-1_dataset', 'preprocessed')\n",
+    "img_dir = path.join('OASIS-1_dataset', 'CAPS')\n",
     "batch_size=4\n",
     "\n",
     "example_dataset = MRIDataset(img_dir, OASIS_df, transform=CropLeftHC())\n",
@@ -1044,7 +1044,7 @@
     "set it may have a negative impact on loss convergence [(Keskar et al,\n",
     "2016)](https://arxiv.org/abs/1609.04836). \n",
     "\n",
-    "Construction of dataset objects"
+    "Construction of dataset objects:"
    ]
   },
   {
@@ -1053,7 +1053,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_dir = path.join('OASIS-1_dataset', 'preprocessed')\n",
+    "img_dir = path.join('OASIS-1_dataset', 'CAPS')\n",
     "transform = CropLeftHC(2)\n",
     "\n",
     "train_datasetLeftHC = MRIDataset(img_dir, train_df, transform=transform)\n",
@@ -1114,9 +1114,13 @@
    "metadata": {},
    "source": [
     "If this is not the case, you have to think again about your framework and\n",
-    "eventually retrain your network...\n",
-    "\n",
-    "%%[markdown]\n",
+    "eventually retrain your network..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Train Classification with Right HC\n",
     "\n",
     "Another network can be trained on a cropped image around the right HC\n",
@@ -1488,7 +1492,9 @@
     "from scipy.ndimage import rotate\n",
     "\n",
     "subject = 'sub-OASIS10003'\n",
-    "preprocessed_pt = torch.load(f'OASIS-1_dataset/preprocessed/{subject}_ses-M00_' +\n",
+    "preprocessed_pt = torch.load(f'OASIS-1_dataset/CAPS/subjects/{subject}/ses-M00/' +\n",
+    "                    'deeplearning_prepare_data/image_based/custom/' + subject +\n",
+    "                    '_ses-M00_'+\n",
     "                    'T1w_segm-graymatter_space-Ixi549Space_modulated-off_' +\n",
     "                    'probability.pt')\n",
     "input_pt = CropLeftHC()(preprocessed_pt).unsqueeze(0).cuda()\n",
