Add info about preprocessing for classification dataset

--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -58,8 +58,10 @@
     "- CN (Cognitively Normal) for healthy participants.\n",
     "- AD (Alzheimer's Disease) for patients affected by Alzheimer's disease.\n",
     "\n",
-    "All the preprocessed images we use were put on github, run the following\n",
-    "command to download them."
+    "The original images were preprocessed using [Clinica](http://www.clinica.run/): \n",
+    "a software platform for clinical neuroimaging studies. \n",
+    "Preprocessed images and other files are distributed in a tarball, run \n",
+    "the following command to download it."
    ]
   },
   {
@@ -184,12 +186,26 @@
     "images to train the network in this lab session, the preprocessing here is\n",
     "very extensive. More specifically, the images encountered:\n",
     "\n",
-    "1. Non-linear registration\n",
-    "2. Segmentation of grey matter\n",
-    "3. Conversion to tensor format (.pt)\n",
+    "1. Non-linear registration.\n",
+    "2. Segmentation of grey matter.\n",
+    "3. Conversion to tensor format (.pt).\n",
     "\n",
-    "The preprocessed images all have the same size (121x145x121). You will find\n",
-    "below a *class* calle `MRIDataset` that allows to browse easily the database."
+    "\n",
+    "As mentioned above, to obtain the preprocessed images, we used some Clinica's\n",
+    "pipelines in order to: \n",
+    "\n",
+    "1. Convert the original dataset to BIDS format ([`clinica convert\n",
+    "oasis-2-bids`](http://www.clinica.run/doc/Converters/OASIS2BIDS/)).\n",
+    "2. Get the non-linear registration and segmentation of grey mater (pipeline\n",
+    "[`t1-volume`](http://www.clinica.run/doc/Pipelines/T1_Volume/)).\n",
+    "3. Obtain the preprocessed images in tensor format (pipeline\n",
+    "[`deeplearning-prepare-data`](https://aramislab.paris.inria.fr/clinica/docs/public/latest/Pipelines/DeepLearning_PrepareData/)).\n",
+    "\n",
+    "\n",
+    "The preprocessed images are store in the [CAPS\n",
+    "format](http://www.clinica.run/doc/CAPS/Introduction/) and all have the same\n",
+    "size (121x145x121). You will find below a *class* called `MRIDataset` that\n",
+    "allows to browse easily the database."
    ]
   },
   {
