--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -44,8 +44,8 @@
    "source": [
     "# 0. Fetching the dataset\n",
     "\n",
-    "The dataset can be found on this \n",
-    "[server](https://aramislab.paris.inria.fr/files/data/databases/DL4MI/IXI-dataset.tar.gz) \n",
+    "The dataset can be found on this\n",
+    "[server](https://aramislab.paris.inria.fr/files/data/databases/DL4MI/IXI-dataset.tar.gz)\n",
     "and alternatively in the following\n",
     "[GitHub repository](https://github.com/Easternwen/IXI-dataset).\n",
     "In the `size64` folder, there are 1154 files: 2 images for 577 subjects.\n",
@@ -369,6 +369,7 @@
     "    def __init__(self, in_channels=1, out_channels=1):\n",
     "        super(GeneratorUNet, self).__init__()\n",
     "\n",
+    "        # <TBR>\n",
     "        self.down1 = UNetDown(in_channels, 64)\n",
     "        self.down2 = UNetDown(64, 128)\n",
     "        self.down3 = UNetDown(128, 256)\n",
@@ -381,8 +382,10 @@
     "        self.up4 = UNetUp(256, 64)\n",
     "\n",
     "        self.final = FinalLayer(128, 1)\n",
+    "        # </TBR>\n",
     "\n",
     "    def forward(self, x):\n",
+    "        # <TBR>\n",
     "        d1 = self.down1(x)\n",
     "        d2 = self.down2(d1)\n",
     "        d3 = self.down3(d2)\n",
@@ -394,7 +397,8 @@
     "        u3 = self.up3(u2, d3)\n",
     "        u4 = self.up4(u3, d2)\n",
     "\n",
-    "        return self.final(u4, d1)"
+    "        return self.final(u4, d1)\n",
+    "        # </TBR>"
    ]
   },
   {
@@ -488,10 +492,10 @@
     "        os.makedirs(\"./images/generator\")\n",
     "\n",
     "    # Loss function\n",
-    "    criterion = torch.nn.L1Loss()  # A loss for a voxel-wise comparison of images like torch.nn.L1Loss\n",
+    "    criterion = # <TBR>torch.nn.L1Loss()# </TBR>  # A loss for a voxel-wise comparison of images like torch.nn.L1Loss\n",
     "\n",
     "    # Initialize the generator\n",
-    "    generator = GeneratorUNet()\n",
+    "    generator = # <TBR>GeneratorUNet()# </TBR>\n",
     "\n",
     "    if cuda:\n",
     "        generator = generator.cuda()\n",
@@ -528,10 +532,10 @@
     "            optimizer.zero_grad()\n",
     "\n",
     "            # Generate fake T2 images from the true T1 images\n",
-    "            fake_t2 = generator(real_t1)\n",
+    "            fake_t2 = # <TBR>generator(real_t1)# </TBR>\n",
     "\n",
     "            # Compute the corresponding loss\n",
-    "            loss = criterion(fake_t2, real_t2)\n",
+    "            loss = # <TBR>criterion(fake_t2, real_t2)# </TBR>\n",
     "\n",
     "            # Compute the gradient and perform one optimization step\n",
     "            loss.backward()\n",
@@ -891,6 +895,7 @@
     "    def __init__(self, in_channels=1):\n",
     "        super(Discriminator, self).__init__()\n",
     "\n",
+    "        # <TBR>\n",
     "        layers = []\n",
     "        layers.extend(discriminator_block(in_channels*2, 64))\n",
     "        layers.extend(discriminator_block(64, 128))\n",
@@ -898,11 +903,14 @@
     "        layers.extend(discriminator_block(256, 512))\n",
     "        layers.append(nn.Conv2d(512, 1, 4, padding=0))\n",
     "        self.model = nn.Sequential(*layers)\n",
+    "        # </TBR>\n",
     "\n",
     "    def forward(self, img_A, img_B):\n",
     "        # Concatenate image and condition image by channels to produce input\n",
+    "        # <TBR>\n",
     "        img_input = torch.cat((img_A, img_B), 1)\n",
-    "        return self.model(img_input)"
+    "        return self.model(img_input)\n",
+    "        # </TBR>"
    ]
   },
   {
@@ -1034,15 +1042,15 @@
     "        os.makedirs(\"./images/cgan\")\n",
     "\n",
     "    # Loss functions\n",
-    "    criterion_GAN = torch.nn.BCEWithLogitsLoss()  # A loss adapted to binary classification like torch.nn.BCEWithLogitsLoss\n",
-    "    criterion_pixelwise = torch.nn.L1Loss()  # A loss for a voxel-wise comparison of images like torch.nn.L1Loss\n",
+    "    criterion_GAN = # <TBR>torch.nn.BCEWithLogitsLoss()# </TBR>  # A loss adapted to binary classification like torch.nn.BCEWithLogitsLoss\n",
+    "    criterion_pixelwise = # <TBR>torch.nn.L1Loss()# </TBR>  # A loss for a voxel-wise comparison of images like torch.nn.L1Loss\n",
     "\n",
     "    lambda_GAN = 1.  # Weights criterion_GAN in the generator loss\n",
     "    lambda_pixel = 1.  # Weights criterion_pixelwise in the generator loss\n",
     "\n",
     "    # Initialize generator and discriminator\n",
-    "    generator = GeneratorUNet()\n",
-    "    discriminator = Discriminator()\n",
+    "    generator = # <TBR>GeneratorUNet()# </TBR>\n",
+    "    discriminator = # <TBR>Discriminator()# </TBR>\n",
     "\n",
     "    if cuda:\n",
     "        generator = generator.cuda()\n",
@@ -1091,12 +1099,12 @@
     "            optimizer_generator.zero_grad()\n",
     "\n",
     "            # GAN loss\n",
-    "            fake_t2 = generator(real_t1)\n",
-    "            pred_fake = discriminator(fake_t2, real_t1)\n",
-    "            loss_GAN = criterion_GAN(pred_fake, valid)\n",
+    "            fake_t2 = # <TBR>generator(real_t1)# </TBR>\n",
+    "            pred_fake = # <TBR>discriminator(fake_t2, real_t1)# </TBR>\n",
+    "            loss_GAN = # <TBR>criterion_GAN(pred_fake, valid)# </TBR>\n",
     "\n",
     "            # L1 loss\n",
-    "            loss_pixel = criterion_pixelwise(fake_t2, real_t2)\n",
+    "            loss_pixel = # <TBR>criterion_pixelwise(fake_t2, real_t2)# </TBR>\n",
     "\n",
     "            # Total loss\n",
     "            loss_generator = lambda_GAN * loss_GAN + lambda_pixel * loss_pixel\n",
@@ -1112,12 +1120,12 @@
     "            optimizer_discriminator.zero_grad()\n",
     "\n",
     "            # Real loss\n",
-    "            pred_real = discriminator(real_t2, real_t1)\n",
-    "            loss_real = criterion_GAN(pred_real, valid)\n",
+    "            pred_real = # <TBR>discriminator(real_t2, real_t1)# </TBR>\n",
+    "            loss_real = # <TBR>criterion_GAN(pred_real, valid)# </TBR>\n",
     "\n",
     "            # Fake loss\n",
-    "            pred_fake = discriminator(fake_t2.detach(), real_t1)\n",
-    "            loss_fake = criterion_GAN(pred_fake, fake)\n",
+    "            pred_fake = # <TBR>discriminator(fake_t2.detach(), real_t1)# </TBR>\n",
+    "            loss_fake = # <TBR>criterion_GAN(pred_fake, fake)# </TBR>\n",
     "\n",
     "            # Total loss\n",
     "            loss_discriminator = 0.5 * (loss_real + loss_fake)\n",
@@ -1405,10 +1413,10 @@
     "    lambda_pixel = 1.  # Weights criterion_pixelwise in the generator loss\n",
     "\n",
     "    # Initialize generators and discriminators\n",
-    "    generator_from_t1_to_t2 = GeneratorUNet()\n",
-    "    generator_from_t2_to_t1 = GeneratorUNet()\n",
-    "    discriminator_from_t1_to_t2 = DiscriminatorCycle()\n",
-    "    discriminator_from_t2_to_t1 = DiscriminatorCycle()\n",
+    "    generator_from_t1_to_t2 = # <TBR>GeneratorUNet()# </TBR>\n",
+    "    generator_from_t2_to_t1 = # <TBR>GeneratorUNet()# </TBR>\n",
+    "    discriminator_from_t1_to_t2 = # <TBR>DiscriminatorCycle()# </TBR>\n",
+    "    discriminator_from_t2_to_t1 = # <TBR>DiscriminatorCycle()# </TBR>\n",
     "\n",
     "    if cuda:\n",
     "        generator_from_t1_to_t2 = generator_from_t1_to_t2.cuda()\n",
@@ -1475,20 +1483,20 @@
     "            optimizer_generator_from_t2_to_t1.zero_grad()\n",
     "\n",
     "            # GAN loss\n",
-    "            fake_t2 = generator_from_t1_to_t2(real_t1)\n",
-    "            pred_fake_t2 = discriminator_from_t1_to_t2(fake_t2)\n",
-    "            loss_GAN_from_t1_to_t2 = criterion_GAN_from_t1_to_t2(pred_fake_t2, valid_t2)\n",
+    "            fake_t2 = # <TBR>generator_from_t1_to_t2(real_t1)# </TBR>\n",
+    "            pred_fake_t2 = # <TBR>discriminator_from_t1_to_t2(fake_t2)# </TBR>\n",
+    "            loss_GAN_from_t1_to_t2 = # <TBR>criterion_GAN_from_t1_to_t2(pred_fake_t2, valid_t2)# </TBR>\n",
     "\n",
-    "            fake_t1 = generator_from_t1_to_t2(real_t2)\n",
-    "            pred_fake_t1 = discriminator_from_t2_to_t1(fake_t1)\n",
-    "            loss_GAN_from_t2_to_t1 = criterion_GAN_from_t2_to_t1(pred_fake_t1, valid_t1)\n",
+    "            fake_t1 = # <TBR>generator_from_t1_to_t2(real_t2)# </TBR>\n",
+    "            pred_fake_t1 = # <TBR>discriminator_from_t2_to_t1(fake_t1)# </TBR>\n",
+    "            loss_GAN_from_t2_to_t1 = # <TBR>criterion_GAN_from_t2_to_t1(pred_fake_t1, valid_t1)# </TBR>\n",
     "\n",
     "            # L1 loss\n",
-    "            fake_fake_t1 = generator_from_t2_to_t1(fake_t2)\n",
-    "            loss_pixel_from_t1_to_t2 = criterion_pixelwise_from_t1_to_t2(fake_fake_t1, real_t1)\n",
+    "            fake_fake_t1 = # <TBR>generator_from_t2_to_t1(fake_t2)# </TBR>\n",
+    "            loss_pixel_from_t1_to_t2 = # <TBR>criterion_pixelwise_from_t1_to_t2(fake_fake_t1, real_t1)# </TBR>\n",
     "\n",
-    "            fake_fake_t2 = generator_from_t1_to_t2(fake_t1)\n",
-    "            loss_pixel_from_t2_to_t1 = criterion_pixelwise_from_t2_to_t1(fake_fake_t2, real_t2)\n",
+    "            fake_fake_t2 = # <TBR>generator_from_t1_to_t2(fake_t1)# </TBR>\n",
+    "            loss_pixel_from_t2_to_t1 = # <TBR>criterion_pixelwise_from_t2_to_t1(fake_fake_t2, real_t2)# </TBR>\n",
     "\n",
     "            # Total loss\n",
     "            loss_generator_from_t1_to_t2 = (lambda_GAN * loss_GAN_from_t1_to_t2 +\n",
@@ -1510,18 +1518,18 @@
     "            optimizer_discriminator_from_t2_to_t1.zero_grad()\n",
     "\n",
     "            # Real loss\n",
-    "            pred_real_t2 = discriminator_from_t1_to_t2(real_t2)\n",
-    "            loss_real_t2 = criterion_GAN_from_t1_to_t2(pred_real_t2, valid_t2)\n",
+    "            pred_real_t2 = # <TBR>discriminator_from_t1_to_t2(real_t2)# </TBR>\n",
+    "            loss_real_t2 = # <TBR>criterion_GAN_from_t1_to_t2(pred_real_t2, valid_t2)# </TBR>\n",
     "\n",
-    "            pred_real_t1 = discriminator_from_t2_to_t1(real_t1)\n",
-    "            loss_real_t1 = criterion_GAN_from_t2_to_t1(pred_real_t1, valid_t1)\n",
+    "            pred_real_t1 = # <TBR>discriminator_from_t2_to_t1(real_t1)# </TBR>\n",
+    "            loss_real_t1 = # <TBR>criterion_GAN_from_t2_to_t1(pred_real_t1, valid_t1)# </TBR>\n",
     "\n",
     "            # Fake loss\n",
-    "            pred_fake_t2 = discriminator_from_t1_to_t2(fake_t2.detach())\n",
-    "            loss_fake_t2 = criterion_GAN_from_t1_to_t2(pred_fake_t2, imitation_t2)\n",
+    "            pred_fake_t2 = # <TBR>discriminator_from_t1_to_t2(fake_t2.detach())# </TBR>\n",
+    "            loss_fake_t2 = # <TBR>criterion_GAN_from_t1_to_t2(pred_fake_t2, imitation_t2)# </TBR>\n",
     "\n",
-    "            pred_fake_t1 = discriminator_from_t2_to_t1(fake_t1.detach())\n",
-    "            loss_fake_t1 = criterion_GAN_from_t2_to_t1(pred_fake_t1, imitation_t1)\n",
+    "            pred_fake_t1 = # <TBR>discriminator_from_t2_to_t1(fake_t1.detach())# </TBR>\n",
+    "            loss_fake_t1 = # <TBR>criterion_GAN_from_t2_to_t1(pred_fake_t1, imitation_t1)# </TBR>\n",
     "\n",
     "            # Total loss\n",
     "            loss_discriminator_from_t1_to_t2 = 0.5 * (loss_real_t2 + loss_fake_t2)\n",
@@ -1653,7 +1661,20 @@
   },
   "kernelspec": {
    "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
