--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -575,7 +575,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "incorrectly_encoded_metadata": "{tags=[\"remove-output\"]}"
+    "tags": [
+     "remove-output"
+    ]
    },
    "outputs": [],
    "source": [
