--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -576,7 +576,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "remove-output"
+     "remove_output"
     ]
    },
    "outputs": [],
